force-app/main/default/objects/Opportunity/fields/Marca_de_motocicleta_anterior__c.field-meta.xml
<CustomField>
    <fullName>Marca_de_motocicleta_anterior__c</fullName>
    <label>Marca de motocicleta anterior</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_cliente__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HONDA</fullName>
            </value>
            <value>
                <fullName>Hero</fullName>
            </value>
            <value>
                <fullName>AKT</fullName>
            </value>
            <value>
                <fullName>Bajaj</fullName>
            </value>
            <value>
                <fullName>Kawasaki</fullName>
            </value>
            <value>
                <fullName>Kymco</fullName>
            </value>
            <value>
                <fullName>Suzuki</fullName>
            </value>
            <value>
                <fullName>Yamaha</fullName>
            </value>
            <value>
                <fullName>TVS</fullName>
            </value>
            <value>
                <fullName>Sym</fullName>
            </value>
            <value>
                <fullName>Sigma</fullName>
            </value>
            <value>
                <fullName>Victory</fullName>
            </value>
            <value>
                <fullName>Royal Enfield</fullName>
            </value>
            <value>
                <fullName>Otras Marcas</fullName>
            </value>
            <value>
                <fullName>Jialing</fullName>
                <isActive>false</isActive>
                <label>Jialing</label>
            </value>
            <value>
                <fullName>KTM</fullName>
                <isActive>false</isActive>
                <label>KTM</label>
            </value>
            <value>
                <fullName>Ninguna</fullName>
                <isActive>false</isActive>
                <label>Ninguna</label>
            </value>
            <value>
                <fullName>Otra Marca</fullName>
                <isActive>false</isActive>
                <label>Otra Marca</label>
            </value>
            <value>
                <fullName>Pulsar</fullName>
                <isActive>false</isActive>
                <label>Pulsar</label>
            </value>
            <value>
                <fullName>UM</fullName>
                <isActive>false</isActive>
                <label>UM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>