force-app/main/default/objects/Opportunity/fields/Marca_Linea_Modelo_VOMP2__c.field-meta.xml
<CustomField>
    <fullName>Marca_Linea_Modelo_VOMP2__c</fullName>
    <description>Marca Línea Modelo del vehículo de otra marca que posee 2.</description>
    <inlineHelpText>Marca Línea Modelo del vehículo de otra marca que posee 2.</inlineHelpText>
    <label>Marca Linea Modelo VOMP2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>