force-app/main/default/objects/Opportunity/fields/Marca_retoma__c.field-meta.xml
<CustomField>
    <fullName>Marca_retoma__c</fullName>
    <label>Marca retoma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>