force-app/main/default/objects/Opportunity/fields/MarcaLineaModelo1__c.field-meta.xml
<CustomField>
    <fullName>MarcaLineaModelo1__c</fullName>
    <label>Marca/Línea/Modelo de otra marca 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>