force-app/main/default/objects/Opportunity/fields/MarcaLineaModelo3__c.field-meta.xml
<CustomField>
    <fullName>MarcaLineaModelo3__c</fullName>
    <label>Marca/Línea/Modelo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>