force-app/main/default/objects/Opportunity/fields/MarcaLineaModeloVOMP__c.field-meta.xml
<CustomField>
    <fullName>MarcaLineaModeloVOMP__c</fullName>
    <description>Marca Línea Modelo del Vehículo de otra marca que posee.</description>
    <inlineHelpText>Marca Línea Modelo del Vehículo de otra marca que posee.</inlineHelpText>
    <label>Marca Linea Modelo VOMP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>