force-app/main/default/objects/Opportunity/fields/Mas_resalta_de_su_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Mas_resalta_de_su_vehiculo__c</fullName>
    <label>Qué es lo que más resalta de su vehículo</label>
    <type>TextArea</type>
</CustomField>