force-app/main/default/objects/Opportunity/fields/MC_Asesor_Correo_Autos__c.field-meta.xml
<CustomField>
    <fullName>MC_Asesor_Correo_Autos__c</fullName>
    <label>MC Asesor Correo Autos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>