force-app/main/default/objects/Opportunity/fields/MC_Asesor_Tel_Autos__c.field-meta.xml
<CustomField>
    <fullName>MC_Asesor_Tel_Autos__c</fullName>
    <label>MC Asesor Tel Autos</label>
    <length>20</length>
    <type>Text</type>
</CustomField>