force-app/main/default/objects/Opportunity/fields/MC_Asesor_Vitrina_Autos__c.field-meta.xml
<CustomField>
    <fullName>MC_Asesor_Vitrina_Autos__c</fullName>
    <label>MC Asesor Vitrina Autos</label>
    <length>50</length>
    <type>Text</type>
</CustomField>