force-app/main/default/objects/Opportunity/fields/MC_Email_de_Cuenta_Aut__c.field-meta.xml
<CustomField>
    <fullName>MC_Email_de_Cuenta_Aut__c</fullName>
    <label>MC Email de Cuenta Aut</label>
    <length>100</length>
    <type>Text</type>
</CustomField>