force-app/main/default/objects/Opportunity/fields/MC_Fecha_Fin_Garantia__c.field-meta.xml
<CustomField>
    <fullName>MC_Fecha_Fin_Garantia__c</fullName>
    <formula>IF(
    ISBLANK(Fecha_de_factura__c),
    Fecha_de_factura__c,
    IF(
        MONTH(Fecha_de_factura__c) = 2 &amp;&amp; DAY(Fecha_de_factura__c) = 29,
        DATE(YEAR(Fecha_de_factura__c) + 2, 2, 28),
        DATE(YEAR(Fecha_de_factura__c) + 2, MONTH(Fecha_de_factura__c), DAY(Fecha_de_factura__c))
    )
)</formula>
    <label>MC Fecha Fin Garantía</label>
    <type>Date</type>
</CustomField>