force-app/main/default/objects/Opportunity/fields/MC_Prod_Autos__c.field-meta.xml
<CustomField>
    <fullName>MC_Prod_Autos__c</fullName>
    <label>MC Prod Autos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>