force-app/main/default/objects/Opportunity/fields/MC_Seg_de_cuenta_Autos__c.field-meta.xml
<CustomField>
    <fullName>MC_Seg_de_cuenta_Autos__c</fullName>
    <label>MC Seg de cuenta Autos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>