force-app/main/default/objects/Opportunity/fields/MC_Tel_de_Cuenta_Autos__c.field-meta.xml
<CustomField>
    <fullName>MC_Tel_de_Cuenta_Autos__c</fullName>
    <label>MC Tel de Cuenta Autos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>