force-app/main/default/objects/Opportunity/fields/MC_Tipo_Cliente_Ini_Autos__c.field-meta.xml
<CustomField>
    <fullName>MC_Tipo_Cliente_Ini_Autos__c</fullName>
    <label>MC Tipo Cliente Ini Autos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>