force-app/main/default/objects/Opportunity/fields/MC_Tipo_Oportunidad_Autos__c.field-meta.xml
<CustomField>
    <fullName>MC_Tipo_Oportunidad_Autos__c</fullName>
    <label>MC Tipo Oportunidad Autos</label>
    <length>50</length>
    <type>Text</type>
</CustomField>