force-app/main/default/objects/Opportunity/fields/Modelo_retoma__c.field-meta.xml
<CustomField>
    <fullName>Modelo_retoma__c</fullName>
    <label>Modelo retoma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>