force-app/main/default/objects/Opportunity/fields/Motivo_Anula__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Anula__c</fullName>
    <label>Mótivo Anulación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>