force-app/main/default/objects/Opportunity/fields/Motivo_de_Oportunidad_Vendida__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Oportunidad_Vendida__c</fullName>
    <label>Motivo de Oportunidad Vendida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diseño</fullName>
            </value>
            <value>
                <fullName>Respaldo/Trayectoria/Confianza de la marca</fullName>
            </value>
            <value>
                <fullName>Características técnicas</fullName>
            </value>
            <value>
                <fullName>Precios/Costos</fullName>
            </value>
            <value>
                <fullName>Otras</fullName>
            </value>
            <value>
                <fullName>Economía en combustible</fullName>
            </value>
            <value>
                <fullName>Cómoda</fullName>
            </value>
            <value>
                <fullName>Crédito asequible</fullName>
            </value>
            <value>
                <fullName>Facilidad de pago (Cuota de crédito)</fullName>
            </value>
            <value>
                <fullName>Fácil manejo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>