force-app/main/default/objects/Opportunity/fields/Motivo_de_Perdida_de_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Perdida_de_Oportunidad__c</fullName>
    <label>Motivo de oportunidad perdida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>El competidor es más barato</fullName>
            </value>
            <value>
                <fullName>El competidor ofrece mejor calidad</fullName>
            </value>
            <value>
                <fullName>Compró otra marca</fullName>
            </value>
            <value>
                <fullName>Compró otro concesionario / Distribuidor</fullName>
            </value>
            <value>
                <fullName>Compro usada</fullName>
            </value>
            <value>
                <fullName>Diseño</fullName>
            </value>
            <value>
                <fullName>Especificaciones técnicas</fullName>
            </value>
            <value>
                <fullName>Localizado</fullName>
            </value>
            <value>
                <fullName>Multa tránsito</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Realizó otra inversión</fullName>
            </value>
            <value>
                <fullName>Reportado OFAC (Clinton)</fullName>
            </value>
            <value>
                <fullName>Requisitos financiación</fullName>
            </value>
            <value>
                <fullName>Incidente técnico</fullName>
                <label>Incidente técnico(fallas del sistema)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>