force-app/main/default/objects/Opportunity/fields/N_mero_de_anulaci_n__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_anulaci_n__c</fullName>
    <label>Número de anulación</label>
    <length>50</length>
    <type>Text</type>
</CustomField>