force-app/main/default/objects/Opportunity/fields/N_mero_de_factura__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_factura__c</fullName>
    <label>Número de factura</label>
    <length>60</length>
    <type>Text</type>
</CustomField>