force-app/main/default/objects/Opportunity/fields/N_mero_O_C__c.field-meta.xml
<CustomField>
    <fullName>N_mero_O_C__c</fullName>
    <label>Número O.C</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>