force-app/main/default/objects/Opportunity/fields/Nombre_cuenta_formulado__c.field-meta.xml
<CustomField>
    <fullName>Nombre_cuenta_formulado__c</fullName>
    <formula>IF( Account.RecordType.DeveloperName == $Label.MotosRecordTypeDevNameAccountNatural, Account.FirstName &amp; &quot; &quot; &amp; Account.Segundo_Nombre__c &amp; &quot; &quot; &amp; Account.LastName &amp; &quot; &quot; &amp; Account.Segundo_Apellido__c, Account.Name)</formula>
    <label>Nombre cuenta formulado</label>
    <type>Text</type>
</CustomField>