force-app/main/default/objects/Opportunity/fields/Notas_de_despacho__c.field-meta.xml
<CustomField>
    <fullName>Notas_de_despacho__c</fullName>
    <label>Notas de despacho</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>