force-app/main/default/objects/Opportunity/fields/NumericAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>NumericAutoNumber__c</fullName>
    <formula>if (isNumber( SUBSTITUTE(AutoNumber__c, &apos; &apos;, &apos;&apos;)  ), abs(value(SUBSTITUTE(AutoNumber__c, &apos; &apos;, &apos;&apos;))), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NumericAutoNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>