force-app/main/default/objects/Opportunity/fields/Numero_consulta_en_Iistas_restrictivas__c.field-meta.xml
<CustomField>
    <fullName>Numero_consulta_en_Iistas_restrictivas__c</fullName>
    <label>Número consulta en Iistas restrictivas</label>
    <length>8</length>
    <type>Text</type>
</CustomField>