force-app/main/default/objects/Opportunity/fields/Numero_de_identificacion_FactANomb__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_identificacion_FactANomb__c</fullName>
    <formula>Facturar_a_nombre_de__r.AM_Numero_de_documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de identificación</label>
    <type>Text</type>
</CustomField>