force-app/main/default/objects/Opportunity/fields/NumVisuaCoti__c.field-meta.xml
<CustomField>
    <fullName>NumVisuaCoti__c</fullName>
    <label>Número de Visualizaciones de Cotización</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>