force-app/main/default/objects/Opportunity/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <label>Observaciones de la solicitud de factura</label>
    <length>270</length>
    <type>LongTextArea</type>
</CustomField>