force-app/main/default/objects/Opportunity/fields/Para_comprar_un_automovil_usted_primero__c.field-meta.xml
<CustomField>
    <fullName>Para_comprar_un_automovil_usted_primero__c</fullName>
    <label>Su automóvil es:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Algo que me facilita la vida. Es practico y necesario</fullName>
            </value>
            <value>
                <fullName>Un medio de transporte para mi familia</fullName>
            </value>
            <value>
                <fullName>Un sello personal o una extensión de mi personalidad</fullName>
            </value>
            <value>
                <fullName>Necesario para mi comodidad, pero también habla sobre mi personalidad</fullName>
            </value>
            <value>
                <fullName>Una decisión consiente y una oportunidad de ayudar al medio ambiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>