force-app/main/default/objects/Opportunity/fields/Perfil_de_cliente_datos_completos__c.field-meta.xml
<CustomField>
    <fullName>Perfil_de_cliente_datos_completos__c</fullName>
    <label>Perfil de cliente datos completos</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>