force-app/main/default/objects/Opportunity/fields/Placa__c.field-meta.xml
<CustomField>
    <fullName>Placa__c</fullName>
    <label>Placa</label>
    <length>6</length>
    <type>Text</type>
</CustomField>