force-app/main/default/objects/Opportunity/fields/Placa_retoma__c.field-meta.xml
<CustomField>
    <fullName>Placa_retoma__c</fullName>
    <label>Placa retoma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>