force-app/main/default/objects/Opportunity/fields/Popup_fecha_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Popup_fecha_de_cierre__c</fullName>
    <formula>AND(
 TEXT(StageName )  &lt;&gt;  &quot;Vendida&quot; || TEXT(StageName )  &lt;&gt;  &quot;Perdida&quot;,
 RecordType_Name__c  =  &quot;Oportunidad Motos&quot;,
 Fecha_cierre_atrasada__c  &lt; 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Popup fecha de cierre</label>
    <type>Checkbox</type>
</CustomField>