force-app/main/default/objects/Opportunity/fields/Popup_sin_seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Popup_sin_seguimiento__c</fullName>
    <formula>AND(
TEXT(StageName ) &lt;&gt; &quot;Vendida&quot; || TEXT(StageName ) &lt;&gt; &quot;Perdida&quot;,
RecordType_Name__c = &quot;Oportunidad Motos&quot;,
 AFOG_NoLlamadasSeguimientoProgramadas__c  &lt;= 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Popup sin seguimiento</label>
    <type>Checkbox</type>
</CustomField>