force-app/main/default/objects/Opportunity/fields/Posee_vehiculo_de_otra_marca__c.field-meta.xml
<CustomField>
    <fullName>Posee_vehiculo_de_otra_marca__c</fullName>
    <label>¿Posee vehículo de otra marca?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
                <label>SI</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>NO</label>
            </value>
            <value>
                <fullName>REEMPLAZO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>