force-app/main/default/objects/Opportunity/fields/Prediction_test_fields__c.field-meta.xml
<CustomField>
    <fullName>Prediction_test_fields__c</fullName>
    <label>Prediction test fields</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>