force-app/main/default/objects/Opportunity/fields/PriorCloseDate__c.field-meta.xml
<CustomField>
    <fullName>PriorCloseDate__c</fullName>
    <label>PriorCloseDate</label>
    <type>Date</type>
</CustomField>