force-app/main/default/objects/Opportunity/fields/Producto_de_Interes__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_Interes__c</fullName>
    <label>Producto de Interés</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Producto_de_Interes</valueSetName>
    </valueSet>
</CustomField>