force-app/main/default/objects/Opportunity/fields/Propietario_vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Propietario_vehiculo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario vehículo</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Propietario vehículo)</relationshipLabel>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>