force-app/main/default/objects/Opportunity/fields/prueba_algo__c.field-meta.xml
<CustomField>
    <fullName>prueba_algo__c</fullName>
    <formula>IF ( TEXT( StageName ) &lt;&gt; &quot;Perdida&quot;  &amp;&amp;  TEXT( StageName ) &lt;&gt; &quot;Vendida&quot;,
IF( Amount   &lt; 1  ||ISBLANK(Amount)  ,0,10) + 
IF (text(StageName )=&quot;-P3&quot;,15, IF(text(StageName )=&quot;-P2&quot;,10,IF ( text(StageName )=&quot;-P1&quot;,5,0)))+ 
IF  (CloseDate  &gt;=  TODAY() ,10,0) +
IF ( Fecha_de_creacion_solo_fecha__c &lt;= TODAY() &amp;&amp; Fecha_de_creacion_solo_fecha__c &gt;= TODAY()-7,10,0)+
IF ( Fecha_de_creacion_solo_fecha2__c &gt;= TODAY()-60 ,5,0)+
IF (  AFOG_NoLlamadasSeguimientoCompletadas__c  &gt;= 3 ,20,0)+
IF (   AFOG_NoLlamadasSeguimientoProgramadas__c   &gt; 0 ,15,0)+
IF ( SyncedQuote.Realizo_consulta_de_precios__c =TRUE,10,0),0
)</formula>
    <label>Puntuacion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>