force-app/main/default/objects/Opportunity/fields/Prueba_funcional_estatica__c.field-meta.xml
<CustomField>
    <fullName>Prueba_funcional_estatica__c</fullName>
    <label>Prueba funcional estática</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>