force-app/main/default/objects/Opportunity/fields/Qu_hizo_con_su_anterior_motocicleta__c.field-meta.xml
<CustomField>
    <fullName>Qu_hizo_con_su_anterior_motocicleta__c</fullName>
    <label>¿Qué hizo con su anterior motocicleta?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_cliente__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendida/Regalada</fullName>
            </value>
            <value>
                <fullName>La conserva y la utiliza</fullName>
            </value>
            <value>
                <fullName>La conserva y NO la utiliza</fullName>
            </value>
            <value>
                <fullName>Ninguna</fullName>
            </value>
            <value>
                <fullName>La tiene un familiar</fullName>
                <isActive>false</isActive>
                <label>La tiene un familiar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>