force-app/main/default/objects/Opportunity/fields/Que_otras_marcas_consideraron__c.field-meta.xml
<CustomField>
    <fullName>Que_otras_marcas_consideraron__c</fullName>
    <label>¿Qué otra marca considero ?- opción 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>