force-app/main/default/objects/Opportunity/fields/Raz_n_de_cancelaci_n__c.field-meta.xml
<CustomField>
    <fullName>Raz_n_de_cancelaci_n__c</fullName>
    <label>Razón de cancelación</label>
    <type>TextArea</type>
</CustomField>